<resources>
    <string name="app_name">CC</string>
    <string name="turn2a">To A</string>
    <string name="clickToCancel">click to cancel</string>
    <string name="canceled">canceled</string>
    <string name="cc_network">network CC (3s)</string>
    <string name="close_activity">finish Activity</string>
    <string name="open_new_fragment">open a new fragment from other component</string>
    <string name="sync_a_open_page">sync call component A (open page)</string>
    <string name="async_a_open_page">async call component A (open page)</string>
    <string name="sync_a_get_data">sync call component A (get data)</string>
    <string name="async_a_get_data">async call component A (get data)</string>
    <string name="sync_b_open_page">sync call component B (open page)</string>
    <string name="async_b_slow_request">async call component B (slow process:3s)</string>
    <string name="sync_b_get_data">sync call component B (get data)</string>
    <string name="async_b_login">async call component B (login simulation)</string>
    <string name="life_cycle_relationship">(Activity/Fragment) lifecycle with login AOP</string>
    <string name="call_fragment_method">send message to fragment</string>
    <string name="call_kotlin_component">kotlin</string>
    <string name="call_sub_process">call sub process</string>
    <string name="show_login_user">current login user: %s</string>
    <string name="observe_login_user">observe</string>
    <string name="unobserve_login_user">un_observe</string>
    <string name="call_timeout">test timeout</string>
</resources>
